Add media messaging and push notification support
- Enabled support for image uploads in messages (Cloudinary + multer memory storage)
- Updated sendMessage controller to handle text, media, or both
- Integrated message media URL storage in DB
- Updated Socket.IO handler to emit push notifications to recipient sockets
- Refined message delivery logic to broadcast to all participants
- Added upload middleware for single/multiple image support

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8000
 MONGODB_URI=mongodb://localhost:27017/chatapp
 JWT_SECRET=your_jwt_secret_here
+  CLOUD_NAME = claude
+  CLOUD_API_KEY = 21332saddsafd
+  CLOUD_API_SECRET= 122dsad23zsad
